--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -13,7 +13,7 @@
 .postPreview {
   max-width: 600px;
   margin: 10px auto;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+  border-bottom: 1px solid #888;
 }
 
 .postPreview:last-child {
@@ -37,7 +37,7 @@
 .post :global(video),
 .post :global(img) {
   margin: 2rem auto;
-  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 8px 8px #888;
   max-width: 100%;
   display: block;
 }
