--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,10 +21,6 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 html,
 body {
   padding: 0;
@@ -226,15 +222,29 @@ pre.dark[class*='language-'] {
     font-size: 0.75rem;
   }
 }
-
+/* 自己紹介文章 */
 .explanation {
-  font-size: 1rem;
+  font-size: 0.95rem;
   width: 35rem;
   max-width: 100vw;
   padding: 0 2rem;
   background: var(--bg);
   margin: var(--gap-half) auto;
+  display: inline-block;
+  text-align: left;
 }
+/* Skillsetの中身 */
+.explanation2 {
+  font-size: 0.95rem;
+  width: 35rem;
+  max-width: 100vw;
+  padding: 0 2rem;
+  background: var(--bg);
+  margin: var(--gap-half) auto;
+  display: inline-block;
+  text-align: left;
+}
+
 figure {
   font-size: 0.85rem;
   color: #999;
@@ -275,17 +285,24 @@ mark {
 h1 {
   margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
   font-size: 2.25rem;
-  font-weight: 800;
+  font-weight: 300;
   letter-spacing: -0.05rem;
 }
 
 h2 {
   font-weight: 300;
-  font-size: 1.25rem;
+  font-size: 1rem;
   letter-spacing: -0.02rem;
   color: var(--accents-3);
 }
 
+h3 {
+  margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
+  font-size: 2.25rem;
+  font-weight: 300;
+  letter-spacing: -0.05rem;
+  text-align: center;
+}
 .video {
   width: 1080px;
   max-width: calc(100vw - 40px);
@@ -299,12 +316,19 @@ h2 {
   max-height: 90vh;
   outline: none;
 }
-
+/* 自己紹介文章 */
 p {
-  color: #555;
-  font-weight: 400;
-  font-size: 0.94rem;
+  color: #888;
+  font-weight: 300;
+  font-size: 0.95rem;
   line-height: 1.7;
+  width: 35rem;
+  max-width: 100vw;
+  padding: 0 2rem;
+  background: var(--bg);
+  margin: var(--gap-half) auto;
+  display: inline-block;
+  text-align: left;
 }
 pre {
   white-space: pre;
