--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -10,6 +10,15 @@
   text-align: center;
 }
 .layout p {
-  text-align: center;
   color: #888;
+  font-weight: 300;
+  font-size: 0.95rem;
+  line-height: 1.7;
+  width: 35rem;
+  max-width: 100vw;
+  padding: 0 2rem;
+  background: var(--bg);
+  margin: var(--gap-half)  auto;
+  display: inline-block;
+  text-align: left;
 }
