--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -5,6 +5,7 @@
   text-align: center;
 }
 
+/* Twitterとinstagramアイコンの隙間 */
 .links a {
   width: 48px;
   height: 48px;
@@ -17,12 +18,14 @@
   opacity: 0.6;
 }
 
+/* アイコンの上下の余白 */
 .avatar {
   display: block;
   text-align: center;
   margin: 1rem 0;
 }
 
+/* アイコンの大きさ */
 .avatar img {
   height: 120px;
 }
