--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -225,7 +225,7 @@ pre.dark[class*='language-'] {
 /* 自己紹介文章 */
 .explanation {
   font-size: 0.95rem;
-  width: 35rem;
+  width: 5px;
   max-width: 100vw;
   padding: 0 2rem;
   background: var(--bg);
@@ -236,9 +236,8 @@ pre.dark[class*='language-'] {
 /* Skillsetの中身 */
 .explanation2 {
   font-size: 0.95rem;
-  width: 35rem;
-  max-width: 100vw;
-  padding: 0 2rem;
+  width: 1200px;
+  padding: 2px;
   background: var(--bg);
   margin: var(--gap-half) auto;
   display: inline-block;
@@ -327,7 +326,7 @@ p {
   font-weight: 300;
   font-size: 0.95rem;
   line-height: 1.7;
-  width: 35rem;
+  width: 1200px;
   max-width: 100vw;
   padding: 0 2rem;
   background: var(--bg);
@@ -379,11 +378,6 @@ code {
 
 .dotted {
   border-bottom: 1px dashed #888;
-}
-
-footer {
-  padding: 2em 0;
-  text-align: center;
 }
 
 footer img {
