--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,7 +1,6 @@
 .links {
   display: block;
   margin: 1rem auto;
-  max-width: 500px;
   text-align: center;
 }
 
@@ -11,7 +10,6 @@
   height: 48px;
   margin: 0 10px;
   display: inline-block;
-  transition: opacity 200ms ease;
 }
 
 .links a:hover {
@@ -25,9 +23,9 @@
   margin: 1rem 0;
 }
 
-/* アイコンの大きさ */
+/* contactアイコンの大きさ */
 .avatar img {
-  height: 120px;
+  height: 240px;
 }
 
 .name {
