--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -9,11 +9,19 @@
 .header ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 .header ul li {
   display: inline-block;
   padding: 0 10px;
+  padding: 0.5em 1em;
+  margin: 0 20px;
+  font-weight: bold;
+  color: #6091d3; /*文字色*/
+  background: #fff;
+  border: solid 3px #888; /*線*/
+  border-radius: 10px; /*角の丸み*/
 }
 
 .header :global(a) {
