--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+* {
+  text-align: center;
+}
+
 :root {
   --gap-quarter: 0.25rem;
   --gap-half: 0.5rem;
@@ -21,10 +25,6 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 html,
 body {
   padding: 0;
@@ -46,7 +46,6 @@ body {
 code[class*='language-'],
 pre[class*='language-'] {
   color: #888;
-  text-align: left;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
@@ -227,14 +226,7 @@ pre.dark[class*='language-'] {
   }
 }
 
-.explanation {
-  font-size: 1rem;
-  width: 35rem;
-  max-width: 100vw;
-  padding: 0 2rem;
-  background: var(--bg);
-  margin: var(--gap-half) auto;
-}
+/* Skillsetの中身 */
 figure {
   font-size: 0.85rem;
   color: #999;
@@ -249,9 +241,12 @@ figure {
 a {
   color: #accaec;
   text-decoration: none;
+  background-color: white;
 }
 a:hover {
-  color: #3291ff;
+  color: #accaec;
+  background-color: whitesmoke;
+  border-radius: 10px;
 }
 
 .links {
@@ -273,19 +268,28 @@ mark {
 }
 
 h1 {
-  margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
+  margin: 5px;
   font-size: 2.25rem;
-  font-weight: 800;
+  font-weight: 300;
   letter-spacing: -0.05rem;
+  text-align: center;
 }
 
 h2 {
+  margin: 5px;
   font-weight: 300;
-  font-size: 1.25rem;
+  font-size: 1rem;
   letter-spacing: -0.02rem;
   color: var(--accents-3);
 }
 
+h3 {
+  margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
+  font-size: 2.25rem;
+  font-weight: 300;
+  letter-spacing: -0.05rem;
+  text-align: center;
+}
 .video {
   width: 1080px;
   max-width: calc(100vw - 40px);
@@ -299,12 +303,14 @@ h2 {
   max-height: 90vh;
   outline: none;
 }
-
+/* 自己紹介文章 */
 p {
-  color: #555;
-  font-weight: 400;
-  font-size: 0.94rem;
-  line-height: 1.7;
+  color: #888;
+  margin: 5px;
+  font-weight: 300;
+  font-size: 0.95rem;
+  letter-spacing: -0.05rem;
+  text-align: center;
 }
 pre {
   white-space: pre;
@@ -338,23 +344,13 @@ code {
 }
 
 @media (max-width: 600px) {
-  .explanation {
-    padding: 0 1rem 4rem;
-  }
-
   h2 {
     font-size: 0.95rem;
-    letter-spacing: 0;
   }
 }
 
 .dotted {
   border-bottom: 1px dashed #888;
-}
-
-footer {
-  padding: 2em 0;
-  text-align: center;
 }
 
 footer img {
