refactor(src/styles/shared.module.css): layoutのcolorを変更しました

--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -10,7 +10,7 @@
   text-align: center;
 }
 .layout p {
-  color: #888;
+  color: black;
   font-weight: 300;
   font-size: 0.95rem;
   display: inline-block;
