refactor(src/components): css color: #0b2438; letter-spacing: 1px;へ修正しました

--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -10,7 +10,7 @@
   text-align: center;
 }
 .layout p {
-  color: black;
+  color: #0b2438;
   font-weight: 300;
   font-size: 0.95rem;
   display: inline-block;
